--- a/practice.html
+++ b/practice.html
@@ -18,6 +18,7 @@
                 padding: 10%;
             }
         </style>
+        hello
     </head>
     <body>
         <h1 class="h">LBS Institute of Technology  for Women</h1>
