--- a/practice.html
+++ b/practice.html
@@ -9,27 +9,59 @@
             }
             .h{
                 color: darkblue;
+                background-color: bisque;
             }
             a{
                 color: black;
                 border: 0cap;
-                margin: auto;
+                margin:0%;
                 background-color: rgb(27, 177, 127);
                 padding: 10%;
             }
         </style>
-        hello
     </head>
     <body>
         <h1 class="h">LBS Institute of Technology  for Women</h1>
         <section>
            
-            <div style="height:200px; width: 200px; display: flex;">
+            <div style="height:50px; width: 200px; display: flex;">
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">Gallary</a>
                 <a href="">Contact</a>
             </div>
+            <div style="height 800px; display: flex; width: 50%;">
+                <img src="Untitled.jpeg">
+            </div>
+            <p>address:Kannampallil(H),Madappally(P.O),Changanacherry,Kottayam</p>
+            <p>email:rosejacob2003@gmail.com</p>
+            <h3>Education</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <td>sl.no</td>
+                        <td class="st">Level of education</td>
+                        <td>year of passing</td>
+                    </tr>
+                </thead>
+                <tbody class="st">
+                    <tr>
+                        <td>1</td>
+                        <td> 10th CBSE</td>
+                        <td> 2019</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>12th CBSE</td>
+                        <td>2021</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>BTech in Computer Science</td>
+                        <td>2025</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
     </body>
