--- a/practice.html
+++ b/practice.html
@@ -26,42 +26,69 @@
            
             <div style="height:50px; width: 200px; display: flex;">
                 <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Gallary</a>
+                <a href="#about">About</a>
+                <a href="#Gallary">Gallary</a>
                 <a href="">Contact</a>
             </div>
             <div style="height 800px; display: flex; width: 50%;">
                 <img src="Untitled.jpeg">
             </div>
-            <p>address:Kannampallil(H),Madappally(P.O),Changanacherry,Kottayam</p>
-            <p>email:rosejacob2003@gmail.com</p>
-            <h3>Education</h3>
+            <p>address:FXRC+9XQ, Vazhuthacaud - Poojappura Rd, Near Central Jail, Poojapura, Thiruvananthapuram, Kerala 695012</p>
+            <p>Email: sureshvr@lbsitw.ac.in.</p>
+            <p>Tel: +91 944 733 2391,0471 234 9232</p>
+            <h3>Our Programs</h3>
             <table>
                 <thead>
                     <tr>
                         <td>sl.no</td>
-                        <td class="st">Level of education</td>
-                        <td>year of passing</td>
+                        <td class="st">Courses</td>
                     </tr>
                 </thead>
                 <tbody class="st">
                     <tr>
                         <td>1</td>
-                        <td> 10th CBSE</td>
-                        <td> 2019</td>
+                        <td> ECE: Electronics and Communication</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>12th CBSE</td>
-                        <td>2021</td>
+                        <td> AEI:Applied Electronics and Instrumentation</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>BTech in Computer Science</td>
-                        <td>2025</td>
+                        <td> CSE:Computer Science and Engineering</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td> IT: Information Technology</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td> CE:Civil Engineering</td>
                     </tr>
                 </tbody>
             </table>
+            </div>
+            <div id="about">
+                <h2 class="cl">About</h2>
+                <h3>Introduction</h3>
+                <p>LBS Institute of Technology  for Women, Poojappura,Trivandrum,starting functiong in 2001,is the first women Engineering college in the state, managed by LBS Center for Science and Technology, the premier institution of Computer
+                    training was established by the Government of Kerala in 1976. The center is administered by a governing body and an executive committee.
+                </p>
+                <h3>Vision</h3>
+                <p>To be center of academic exellence empowering women in technical domain</p>
+                <h3>Mission</h3>
+                <p>Imparting value based technical education for transforming young women to professionalsexcelling globally in academics,research&development and industrymeeting societial changes</p>
+            </div>
+            <div id="Gallary">
+                <h2 class="cl">Gallary</h2>
+                <img src="gate.jpeg">
+                <img src="map.jpeg">
+                <img src="g1.jpeg">
+                <img src="Untitled.jpeg">
+                <img src="g2.jpeg">
+                <img src="g3.jpeg">
+                <img src="g4.jpeg">
+            </div>
         </section>
 
     </body>
