--- a/practice.html
+++ b/practice.html
@@ -70,14 +70,18 @@
             </div>
             <div id="about">
                 <h2 class="cl">About</h2>
-                <h3>Introduction</h3>
-                <p>LBS Institute of Technology  for Women, Poojappura,Trivandrum,starting functiong in 2001,is the first women Engineering college in the state, managed by LBS Center for Science and Technology, the premier institution of Computer
+                <div width="50%">
+                    <h3>Introduction</h3>
+                    <p>LBS Institute of Technology  for Women, Poojappura,Trivandrum,starting functiong in 2001,is the first women Engineering college in the state, managed by LBS Center for Science and Technology, the premier institution of Computer
                     training was established by the Government of Kerala in 1976. The center is administered by a governing body and an executive committee.
-                </p>
+                    </p>
+                </div>
+                <div width="50%">
                 <h3>Vision</h3>
                 <p>To be center of academic exellence empowering women in technical domain</p>
                 <h3>Mission</h3>
                 <p>Imparting value based technical education for transforming young women to professionalsexcelling globally in academics,research&development and industrymeeting societial changes</p>
+               </div>
             </div>
             <div id="Gallary">
                 <h2 class="cl">Gallary</h2>
