--- a/practice.html
+++ b/practice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>LBS Trivandram</title>
+        <title>LBS Trivandrum</title>
         <style>
             .cl{
                 color:cornflowerblue;
@@ -21,6 +21,7 @@
         </style>
     </head>
     <body>
+        <img src="g6.png">
         <h1 class="h">LBS Institute of Technology  for Women</h1>
         <section>
            
@@ -32,6 +33,7 @@
             </div>
             <div style="height 800px; display: flex; width: 50%;">
                 <img src="Untitled.jpeg">
+                
             </div>
             <div id="home">
                 <h2 class="cl">Home</h2>
@@ -91,6 +93,11 @@
                 <img src="g2.jpeg">
                 <img src="g3.jpeg">
                 <img src="g4.jpeg">
+                <img src="g7.jpeg">
+                <img src="acc.png">
+                <img src="g8.jpeg">
+                <img src="fr.jpeg">
+                <img src="feestructure.png">
             </div>
             <div id="Dept">
                 <h2 class="cl">Department</h2>
@@ -116,6 +123,8 @@
                         department are most wanted by both academia and corporates.
                     </p>
             </div>
+            <h4>Our Recruiters</h4>
+            <img style="height: 100%; width: 100%; display: flex;" src="rec.jpeg">
         </section>
 
     </body>
