--- a/index.html
+++ b/index.html
@@ -1,53 +1,131 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Resume
-        </title>
+        <title>LBS Trivandrum</title>
+        <style>
+            .cl{
+                color:cornflowerblue;
+                text-align: center;
+            }
+            .h{
+                color: darkblue;
+                background-color: bisque;
+            }
+            a{
+                color: black;
+                border: 0cap;
+                margin:0%;
+                background-color: rgb(27, 177, 127);
+                padding: 10%;
+            }
+        </style>
     </head>
-    <style>
-        .st{
-            text-align:center;
-        }
-        .cl{
-            color:rgb(143, 153, 100);
-        }
-    </style>
     <body>
-        <h1 class="cl">ROSE JACOB</h1>
-        <p>age:19</p>
-        <p>address:Kannampallil(H),Madappally(P.O),Changanacherry,Kottayam</p>
-        <p>email:rosejacob2003@gmail.com</p>
-        <h3>Education</h3>
-        <table>
-            <thead>
-                <tr>
-                    <td>sl.no</td>
-                    <td class="st">Level of education</td>
-                    <td>year of passing</td>
-                </tr>
-            </thead>
-            <tbody class="st">
-                <tr>
-                    <td>1</td>
-                    <td> 10th CBSE</td>
-                    <td> 2019</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>12th CBSE</td>
-                    <td>2021</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>BTech in Computer Science</td>
-                    <td>2025</td>
-                </tr>
-            </tbody>
-        </table> 
-        <h3>About</h3>
-        <p>I am able to handle multiple tasks</p>
-        <p>I use a creative approach to problem solving</p>
-        <p>i am always energetic and eager to learn new skills</p>  
+        <img src="g6.png">
+        <h1 class="h">LBS Institute of Technology  for Women</h1>
+        <section>
+           
+            <div style="height:50px; width: 200px; display: flex;">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#Gallary">Gallary</a>
+                <a href="#Dept">Department</a>
+            </div>
+            <div style="height 800px; display: flex; width: 50%;">
+                <img src="Untitled.jpeg">
+                
+            </div>
+            <div id="home">
+                <h2 class="cl">Home</h2>
+            <p>address:FXRC+9XQ, Vazhuthacaud - Poojappura Rd, Near Central Jail, Poojapura, Thiruvananthapuram, Kerala 695012</p>
+            <p>Email: sureshvr@lbsitw.ac.in.</p>
+            <p>Tel: +91 944 733 2391,0471 234 9232</p>
+        </div>
+            <h3>Our Programs</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <td>sl.no</td>
+                        <td class="st">Courses</td>
+                    </tr>
+                </thead>
+                <tbody class="st">
+                    <tr>
+                        <td>1</td>
+                        <td> ECE: Electronics and Communication</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td> AEI:Applied Electronics and Instrumentation</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td> CSE:Computer Science and Engineering</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td> IT: Information Technology</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td> CE:Civil Engineering</td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+            <div id="about">
+                <h2 class="cl">About</h2>
+                <h3>Introduction</h3>
+                    <p>LBS Institute of Technology  for Women, Poojappura,Trivandrum,starting functiong in 2001,is the first women Engineering college in the state, managed by LBS Center for Science and Technology, the premier institution of Computer
+                    training was established by the Government of Kerala in 1976. The center is administered by a governing body and an executive committee.
+                    </p>
+                <h3>Vision</h3>
+                    <p>To be center of academic exellence empowering women in technical domain</p>
+                <h3>Mission</h3>
+                    <p>Imparting value based technical education for transforming young women to professionalsexcelling globally in academics,research&development and industrymeeting societial changes</p>
+            </div>
+            <div id="Gallary">
+                <h2 class="cl">Gallary</h2>
+                <img src="gate.jpeg">
+                <img src="map.jpeg">
+                <img src="g1.jpeg">
+                <img src="Untitled.jpeg">
+                <img src="g2.jpeg">
+                <img src="g3.jpeg">
+                <img src="g4.jpeg">
+                <img src="g7.jpeg">
+                <img src="acc.png">
+                <img src="g8.jpeg">
+                <img src="fr.jpeg">
+                <img src="feestructure.png">
+            </div>
+            <div id="Dept">
+                <h2 class="cl">Department</h2>
+                <h3>Department of Electronics and Communication</h3>
+                <p>Department of ECE started in year 2001,offers
+                    B.Tech in Electronics and communication &Engineering(ECE) and Applied Electronics and 
+                    Instrumentation(AEI) since 2001 and M.Tech in signal Processing from 2012 onwards.
+                </p>
+                <h3>Department of Computer Science and Engineering </h2>
+                    <p>Department of Computer Science and Engineering started in the year 2001.offeres two
+                        batches of B.Tech in Computer Science and Engineering(CSE). CSE is highly technical and demanding discipline that offers rewarding and challenging 
+                        possibilities for the studenys.
+                    </p>
+                <h3>Department of Civil Engineering </h2>
+                    <p>Department of Civil Engineering started in the year 2012,offers B.Tech programme in Civil Engineering(CE)
+                        with an annual intake of 60 students.
+                    </p>
+                <h3>Department of Information Technology</h3>
+                    <p>The Department offers one B.Tech in Information Technology(IT).
+                        IT and CSE are the disciplines within the same realm of study.Information Technology is an academic discipline mostly dealing with industry oriented
+                        learning.It involves more practical that have more "real world" applications such as database management and networking,
+                        data querying and more.The department provides state of the art computing facilities to the students.Graduates from
+                        department are most wanted by both academia and corporates.
+                    </p>
+            </div>
+            <h4>Our Recruiters</h4>
+            <img style="height: 100%; width: 100%; display: flex;" src="rec.jpeg">
+        </section>
+
     </body>
 </html>
