--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </style>
     </head>
     <body>
-        <img src="g6.png">
+        <img src="images/g6.png">
         <h1 class="h">LBS Institute of Technology  for Women</h1>
         <section>
            
@@ -32,7 +32,7 @@
                 <a href="#Dept">Department</a>
             </div>
             <div style="height 800px; display: flex; width: 50%;">
-                <img src="Untitled.jpeg">
+                <img src="images/Untitled.jpeg">
                 
             </div>
             <div id="home">
@@ -86,18 +86,18 @@
             </div>
             <div id="Gallary">
                 <h2 class="cl">Gallary</h2>
-                <img src="gate.jpeg">
-                <img src="map.jpeg">
-                <img src="g1.jpeg">
-                <img src="Untitled.jpeg">
-                <img src="g2.jpeg">
-                <img src="g3.jpeg">
-                <img src="g4.jpeg">
-                <img src="g7.jpeg">
-                <img src="acc.png">
-                <img src="g8.jpeg">
-                <img src="fr.jpeg">
-                <img src="feestructure.png">
+                <img src="images/gate.jpeg">
+                <img src="images/map.jpeg">
+                <img src="images/g1.jpeg">
+                <img src="images/Untitled.jpeg">
+                <img src="images/g2.jpeg">
+                <img src="images/g3.jpeg">
+                <img src="images/g4.jpeg">
+                <img src="images/g7.jpeg">
+                <img src="images/acc.png">
+                <img src="images/g8.jpeg">
+                <img src="images/fr.jpeg">
+                <img src="images/feestructure.png">
             </div>
             <div id="Dept">
                 <h2 class="cl">Department</h2>
@@ -124,7 +124,7 @@
                     </p>
             </div>
             <h4>Our Recruiters</h4>
-            <img style="height: 100%; width: 100%; display: flex;" src="rec.jpeg">
+            <img style="height: 100%; width: 100%; display: flex;" src="images/rec.jpeg">
         </section>
 
     </body>
