--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>
             <h4>Our Recruiters</h4>
             <img style="height: 100%; width: 100%; display: flex;" src="images/rec.jpeg">
+            <h1>Thank You!</h1>
         </section>
 
     </body>
