--- a/reg.html
+++ b/reg.html
@@ -26,7 +26,7 @@
         }
     </script>
     <body class="st">
-        <form action="contact.html" method="get" style="padding-left: 5px; border: 10px;">
+        <form action="#" method="get" style="padding-left: 5px; border: 10px;">
             <div class="c" style="padding: 50px;border: 10px;">
             
                 <h1>Registration Form</h1>
